# agent-runner-claude

./: .gitignore  Cargo.toml  README.md
src/: describe.rs  encoding.rs  lib.rs  main.rs  schema_lookup.rs  settings_schema.rs
src/discovery/: accounts.rs  mod.rs  models.rs
src/dispatch/: mod.rs  router.rs  subcommand.rs
src/envelope/: decode.rs  error.rs  mod.rs  response.rs
src/fs/: atomic.rs  mod.rs  paths.rs
src/launch/: child.rs  drain.rs  events.rs  mod.rs  params.rs  session_marker.rs  stdin.rs
src/migration/: apply.rs  legacy.rs  mod.rs  plan.rs
src/policy/: argv.rs  diagnostics.rs  mod.rs  params.rs  prompt.rs  restrictions.rs
src/quota/: mod.rs  parse.rs  probe.rs  refresh_auth.rs  scripts.rs  source.rs  window.rs
src/rotation/: artifacts.rs  assess.rs  host_plan.rs  materialize.rs  mod.rs
src/session/: atomic.rs  canonical.rs  capture.rs  export.rs  locate.rs  mod.rs  native_claude.rs  read_turns.rs  replace.rs  storage.rs  types.rs
tests/: characterization_policy_claude.rs  characterization_quota_anthropic.rs  characterization_session_claude_storage.rs  characterization_setup_claude.rs  characterization_terminal_claude.rs  contract_cli_spine.rs  contract_conformance.rs  contract_describe_schema.rs  contract_discovery.rs  contract_launch.rs  contract_migration.rs  contract_policy.rs  contract_quota.rs  contract_rotation.rs  contract_session_capture.rs  contract_session_export.rs  contract_session_locate.rs  contract_session_read_turns.rs  contract_session_replace.rs  contract_settings.rs  contract_setup.rs  contract_terminal.rs
(+30 files in other folders)
