[package]
name = "agent-runner-claude"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "agent-runner-claude"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
jsonschema = { version = "0.18", features = ["draft202012"] }
