[package]
name = "agent-runner-claude"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "agent-runner-claude"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
jsonschema = { version = "0.18", features = ["draft202012"] }
